fixing tests for new error routine format

--- a/sites/Thomass-MBP/Makefile_runtime_packet_cpp
+++ b/sites/Thomass-MBP/Makefile_runtime_packet_cpp
@@ -55,6 +55,7 @@ SRCS       = \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/TileAmrex.cpp \
     $(SRCDIR)/Grid_IntVect.cpp \
+    $(SRCDIR)/Grid_RealVect.cpp \
     $(SRCDIR)/Grid.cpp \
     $(SRCDIR)/GridAmrex.cpp \
     $(SRCDIR)/Grid_AmrCoreFlash.cpp \
