(Issue #8) The fused action example as well as the stream/queue interface of the DataPacket class highlight that there is a general need for streams, regardless of the backend that will be used.  Therefore, the runtime now has generic Stream and StreamManager classes.
As part of implementing this, I decided to simplify the CudaStreamManager as
some of the paranoid internal checking is likely no longer necessary.

Updated all tests to use this and these are passing without correctness or
performance regressions.

NOTE: The F2003 gather data test is presently failing.  This will be addressed
when I try to move this test to using GPUs.

--- a/sites/summit/Makefile_cuda_backend
+++ b/sites/summit/Makefile_cuda_backend
@@ -14,11 +14,12 @@ CUDADIR      = $(OLCF_CUDA_ROOT)
 # Common files
 HDRS   = \
     $(INCDIR)/OrchestrationLogger.h \
-    $(INCDIR)/CudaStream.h \
+    $(INCDIR)/Stream.h \
+    $(INCDIR)/StreamManager.h \
     $(INCDIR)/CudaStreamManager.h
 SRCS       = \
     $(SRCDIR)/OrchestrationLogger.cpp \
-    $(SRCDIR)/CudaStream.cpp \
+    $(SRCDIR)/StreamManager.cpp \
     $(TESTDIR)/testCudaStreamManager.cpp \
     $(TESTDIR)/runCudaBackendTests.cpp
 CU_SRCS       = \
@@ -28,12 +29,14 @@ OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 CUOBJS    = $(addsuffix .o, $(basename $(CU_SRCS)))
 COMMAND   =  $(BASE).x
 
+OACC_FLAGS = -acc -ta=tesla:cc70,cuda10.1,ptxinfo -Minfo=accel
+
 CXX       = pgc++
-CXXFLAGS  = -g -O0 -traceback -std=c++11  -I$(INCDIR) -I$(TESTDIR) -I$(GTESTDIR)/include -DUSE_CUDA_BACKEND
+CXXFLAGS  = -g -O0 -traceback -std=c++11  -I$(INCDIR) -I$(TESTDIR) -I$(GTESTDIR)/include $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
 CXXWARNS  =
 
 CU        = nvcc
-CUFLAGS   = -ccbin=pgc++ -g -O0 -std=c++11 -m64 -gencode arch=compute_70,code=sm_70 -I$(INCDIR) -I$(TESTDIR) -I$(GTESTDIR)/include -DUSE_CUDA_BACKEND -D__PGI
+CUFLAGS   = -ccbin=pgc++ -g -O0 -std=c++11 -m64 -gencode arch=compute_70,code=sm_70 -I$(INCDIR) -I$(TESTDIR) -I$(GTESTDIR)/include -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD -D__PGI
 CUWARNS   =
 
 LIBS      = -lpthread -lstdc++ -lcudart -lgtest
