--- a/sites/summit/Makefile_gatherData_cuda_cpp
+++ b/sites/summit/Makefile_gatherData_cuda_cpp
@@ -42,13 +42,14 @@ CXX_HDRS   = \
     $(INCDIR)/RuntimeElement.h \
     $(INCDIR)/RuntimeAction.h \
     $(INCDIR)/ActionBundle.h \
+    $(INCDIR)/Stream.h \
+    $(INCDIR)/StreamManager.h \
     $(INCDIR)/Runtime.h \
     $(TESTBASEDIR)/setInitialConditions.h \
     $(TESTBASEDIR)/sleepyGoByeBye.h
 CU_HDRS   = \
     $(INCDIR)/CudaGpuEnvironment.h \
     $(INCDIR)/CudaDataPacket.h \
-    $(INCDIR)/CudaStream.h \
     $(INCDIR)/CudaStreamManager.h \
     $(INCDIR)/CudaMemoryManager.h
 SRCS       = \
@@ -71,7 +72,7 @@ SRCS       = \
     $(SRCDIR)/Grid_AmrCoreFlash.cpp \
     $(SRCDIR)/OrchestrationLogger.cpp \
     $(SRCDIR)/MoverUnpacker.cpp \
-    $(SRCDIR)/CudaStream.cpp \
+    $(SRCDIR)/StreamManager.cpp \
     $(SRCDIR)/Runtime.cpp \
     $(TESTBASEDIR)/setInitialConditions.cpp \
     $(TESTBASEDIR)/setInitialConditions_tile_cpu.cpp \
