--- a/sites/summit/Makefile_runtime_cuda
+++ b/sites/summit/Makefile_runtime_cuda
@@ -43,6 +43,8 @@ CXX_HDRS   = \
     $(INCDIR)/DataPacket.h \
     $(INCDIR)/OrchestrationLogger.h \
     $(INCDIR)/MoverUnpacker.h \
+    $(INCDIR)/Stream.h \
+    $(INCDIR)/StreamManager.h \
     $(INCDIR)/Runtime.h \
     $(TESTBASEDIR)/setInitialConditions.h \
     $(TESTBASEDIR)/computeLaplacianDensity.h \
@@ -52,7 +54,6 @@ CXX_HDRS   = \
 CU_HDRS   = \
     $(INCDIR)/CudaGpuEnvironment.h \
     $(INCDIR)/CudaDataPacket.h \
-    $(INCDIR)/CudaStream.h \
     $(INCDIR)/CudaStreamManager.h \
     $(INCDIR)/CudaMemoryManager.h
 SRCS       = \
@@ -75,7 +76,7 @@ SRCS       = \
     $(SRCDIR)/Grid_AmrCoreFlash.cpp \
     $(SRCDIR)/OrchestrationLogger.cpp \
     $(SRCDIR)/MoverUnpacker.cpp \
-    $(SRCDIR)/CudaStream.cpp \
+    $(SRCDIR)/StreamManager.cpp \
     $(SRCDIR)/Runtime.cpp \
     $(TESTBASEDIR)/setInitialConditions.cpp \
     $(TESTBASEDIR)/setInitialConditions_tile_cpu.cpp \
