--- a/sites/hello/Makefile_runtime_null_cpp
+++ b/sites/hello/Makefile_runtime_null_cpp
@@ -35,7 +35,8 @@ SRCS       = \
     $(SRCDIR)/ThreadTeamRunningOpen.cpp \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
     $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
-    $(TESTDIR)/testRuntimeNull.cpp
+    $(TESTDIR)/testRuntimeNull.cpp \
+    $(TESTDIR)/runRuntimeTests.cpp
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 COMMAND   =  $(BASE).x
