--- a/sites/gce/Makefile_gatherData_F2003
+++ b/sites/gce/Makefile_gatherData_F2003
@@ -2,16 +2,18 @@ SHELL=/bin/sh
 
 # TODO: Redo this with more care.  Make certain that template .h/.cpp dependencies are correct
 
-BASE     = gather_data_F2003
-MAKEFILE = Makefile_gatherData_F2003
-BASEDIR  = ../..
-INCDIR   = $(BASEDIR)/includes
-SRCDIR   = $(BASEDIR)/src
-TESTDIR  = $(BASEDIR)/test/GatherDataF2003
-AMREXDIR = $(HOME)/local/intel_19.0/AMReX_2D
+BASE        = gather_data_F2003
+MAKEFILE    = Makefile_gatherData_F2003
+BASEDIR     = ../..
+INCDIR      = $(BASEDIR)/includes
+SRCDIR      = $(BASEDIR)/src
+TESTBASEDIR = $(BASEDIR)/test/Base
+TESTDIR     = $(BASEDIR)/test/GatherDataF2003
+AMREXDIR    = $(HOME)/local/intel_19.0/AMReX_2D
 
 # Common files
 CXX_HDRS   = \
+    $(INCDIR)/FArray1D.h \
     $(INCDIR)/FArray4D.h \
     $(INCDIR)/Tile.h \
     $(INCDIR)/TileAmrex.h \
@@ -22,12 +24,8 @@ CXX_HDRS   = \
     $(INCDIR)/Grid.h \
     $(INCDIR)/GridAmrex.h \
     $(INCDIR)/Grid_AmrCoreFlash.h \
-    $(INCDIR)/DataPacket.h \
     $(INCDIR)/actionRoutine.h \
     $(INCDIR)/OrchestrationLogger.h \
-    $(INCDIR)/OrchestrationRuntime.h \
-    $(INCDIR)/DataItem.h \
-    $(INCDIR)/RuntimeElement.h \
     $(INCDIR)/ThreadTeamModes.h \
     $(INCDIR)/ThreadTeamDataType.h \
     $(INCDIR)/ThreadTeam.h \
@@ -37,12 +35,24 @@ CXX_HDRS   = \
     $(INCDIR)/ThreadTeamRunningOpen.h \
     $(INCDIR)/ThreadTeamRunningClosed.h \
     $(INCDIR)/ThreadTeamRunningNoMoreWork.h \
-    $(INCDIR)/DataItemSplitter.h \
-    $(INCDIR)/ActionBundle.h \
+    $(INCDIR)/DataItem.h \
+    $(INCDIR)/RuntimeElement.h \
     $(INCDIR)/RuntimeAction.h \
-    $(TESTDIR)/Flash.h \
-    $(TESTDIR)/constants.h
+    $(INCDIR)/ActionBundle.h \
+    $(INCDIR)/Stream.h \
+    $(INCDIR)/StreamManager.h \
+    $(INCDIR)/NullStreamManager.h \
+    $(INCDIR)/Runtime.h \
+    $(TESTBASEDIR)/errorEstBlank.h
 CXX_SRCS       = \
+    $(SRCDIR)/RuntimeElement.cpp \
+    $(SRCDIR)/ThreadTeam.cpp \
+    $(SRCDIR)/ThreadTeamIdle.cpp \
+    $(SRCDIR)/ThreadTeamTerminating.cpp \
+    $(SRCDIR)/ThreadTeamRunningOpen.cpp \
+    $(SRCDIR)/ThreadTeamRunningClosed.cpp \
+    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
+    $(SRCDIR)/FArray1D.cpp \
     $(SRCDIR)/FArray4D.cpp \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/TileAmrex.cpp \
@@ -52,18 +62,12 @@ CXX_SRCS       = \
     $(SRCDIR)/GridAmrex.cpp \
     $(SRCDIR)/Grid_AmrCoreFlash.cpp \
     $(SRCDIR)/OrchestrationLogger.cpp \
-    $(SRCDIR)/OrchestrationRuntime.cpp \
-    $(SRCDIR)/RuntimeElement.cpp \
-    $(SRCDIR)/ThreadTeam.cpp \
-    $(SRCDIR)/ThreadTeamIdle.cpp \
-    $(SRCDIR)/ThreadTeamTerminating.cpp \
-    $(SRCDIR)/ThreadTeamRunningOpen.cpp \
-    $(SRCDIR)/ThreadTeamRunningClosed.cpp \
-    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
-    $(SRCDIR)/DataItemSplitter.cpp \
+    $(SRCDIR)/StreamManager.cpp \
+    $(SRCDIR)/Runtime.cpp \
     $(SRCDIR)/tile_fi.cpp \
     $(SRCDIR)/grid_fi.cpp \
-    $(SRCDIR)/orchestration_runtime_fi.cpp
+    $(SRCDIR)/orchestration_runtime_fi.cpp \
+    $(TESTBASEDIR)/errorEstBlank.cpp
 F2003_SRCS       = \
     $(SRCDIR)/tile_mod.F90 \
     $(SRCDIR)/Grid_interface.F90 \
@@ -96,11 +100,11 @@ MODS       = $(addsuffix .mod, $(basename $(F2003_SRCS)))
 COMMAND    =  $(BASE).x
 
 CXX        = mpic++
-CXXFLAGS   = -g -O0 -std=c++11 -I$(INCDIR) -I$(TESTDIR) -I$(AMREXDIR)/include
+CXXFLAGS   = -g -O0 -std=c++11 -xSKYLAKE-AVX512 -I$(INCDIR) -I$(TESTDIR) -I$(TESTBASEDIR) -I$(AMREXDIR)/include
 CXXWARNS   =
 
 F2003      = mpifort
-F2003FLAGS = -g -O0 -fpp -I$(TESTDIR) -I$(AMREXDIR)/include -fpconstant -double-size 64 -real-size 64
+F2003FLAGS = -g -O0 -fpp -xSKYLAKE-AVX512 -I$(TESTDIR) -I$(AMREXDIR)/include -fpconstant -double-size 64 -real-size 64
 F2003WARNS =
 
 LIBS       = -lpthread -lstdc++ -lifcore -lamrex
@@ -149,7 +153,7 @@ $(COMMAND): $(OBJS) $(MODS) $(MAKEFILE)
 	@printf "character(*), parameter :: F2003_COMPILER = '" >> $(TESTDIR)/buildInfo.inc
 	@printf "%s'\n" $(F2003) >> $(TESTDIR)/buildInfo.inc
 
-	# TODO: Get full version string with --version and parse out version string
+# TODO: Get full version string with --version and parse out version string
 #	@printf "character(*), parameter :: F2003_COMPILER_VERSION = \'" >> $(TESTDIR)/buildInfo.inc
 #	@printf "%s\'\n" `$(F2003) -dumpversion` >> $(TESTDIR)/buildInfo.inc
 
