--- a/sites/gce/Makefile_runtime_cpu_cpp
+++ b/sites/gce/Makefile_runtime_cpu_cpp
@@ -39,12 +39,15 @@ CXX_HDRS   = \
     $(INCDIR)/RuntimeAction.h \
     $(INCDIR)/DataItem.h \
     $(INCDIR)/OrchestrationLogger.h \
-    $(INCDIR)/MoverUnpacker.h \
+    $(INCDIR)/Stream.h \
+    $(INCDIR)/StreamManager.h \
+    $(INCDIR)/NullStreamManager.h \
     $(INCDIR)/Runtime.h \
     $(TESTBASEDIR)/setInitialConditions.h \
+    $(TESTBASEDIR)/errorEstBlank.h \
     $(TESTBASEDIR)/computeLaplacianDensity.h \
     $(TESTBASEDIR)/computeLaplacianEnergy.h \
-    $(TESTBASEDIR)/scaleEnergy.h \
+    $(TESTBASEDIR)/computeLaplacianFused.h \
     $(TESTBASEDIR)/Analysis.h
 SRCS       = \
     $(SRCDIR)/RuntimeElement.cpp \
@@ -64,15 +67,17 @@ SRCS       = \
     $(SRCDIR)/GridAmrex.cpp \
     $(SRCDIR)/Grid_AmrCoreFlash.cpp \
     $(SRCDIR)/OrchestrationLogger.cpp \
+    $(SRCDIR)/StreamManager.cpp \
     $(SRCDIR)/Runtime.cpp \
     $(TESTBASEDIR)/setInitialConditions.cpp \
     $(TESTBASEDIR)/setInitialConditions_tile_cpu.cpp \
+    $(TESTBASEDIR)/errorEstBlank.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity_tile_cpu.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy_tile_cpu.cpp \
-    $(TESTBASEDIR)/scaleEnergy.cpp \
-    $(TESTBASEDIR)/scaleEnergy_tile_cpu.cpp \
+    $(TESTBASEDIR)/computeLaplacianFusedKernels.cpp \
+    $(TESTBASEDIR)/computeLaplacianFusedKernels_tile_cpu.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
     $(TESTDIR)/testRuntime.cpp \
     $(TESTDIR)/runRuntimeTests.cpp
@@ -82,7 +87,7 @@ CUOBJS    = $(addsuffix .o, $(basename $(CU_SRCS)))
 COMMAND   =  $(BASE).x
 
 CXX       = mpicxx
-CXXFLAGS  = -g -O0 -traceback -std=c++11  -I$(INCDIR) -I$(TESTDIR) -I$(TESTBASEDIR) -I$(AMREXDIR)/include $(OACC_FLAGS) -I$(GTESTDIR)/include
+CXXFLAGS  = -g -O0 -traceback -std=c++11 -xSKYLAKE-AVX512 -I$(INCDIR) -I$(TESTDIR) -I$(TESTBASEDIR) -I$(AMREXDIR)/include $(OACC_FLAGS) -I$(GTESTDIR)/include
 CXXWARNS  =
 
 LIBS      = -lpthread -lifcore -lstdc++ -lamrex -lgtest
