--- a/sites/gce/Makefile_threadteam_cpp
+++ b/sites/gce/Makefile_threadteam_cpp
@@ -48,7 +48,7 @@ OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 COMMAND   =  $(BASE).x
 
 CXX       = icpc
-CXXFLAGS  = -g -O0 -std=c++11 -I$(INCDIR) -I$(TESTDIR) -I$(TESTBASEDIR) -I$(GTESTDIR)/include
+CXXFLAGS  = -g -O0 -std=c++11 -xSKYLAKE-AVX512 -I$(INCDIR) -I$(TESTDIR) -I$(TESTBASEDIR) -I$(GTESTDIR)/include
 CXXWARNS  =
 
 LIBS      = -lpthread -lstdc++ -lgtest
