(Issue #19) Got a first version of Sedov/2D/simpleUnsplit working with CPU-only runtime.  This includes computing with two MPI processes and each using two threads.
I have not yet verified quantifiably that this is running correctly.  However,
by comparing results in visit against a Flash-X result, I get the same form and
min/max bounds on the colorbar.

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ sites/*/gather_data_cpp_*_*.x
 sites/*/gather_data_F2003.x
 sites/*/gather_data_F2003_*_*.x
 sites/*/binaries
+sites/*/sedov_*
 sites/hello/*.x
 sites/hello/*.dat
 sites/gce/*.dat
@@ -43,6 +44,8 @@ test/*/buildInfo.inc
 test/Flash.h
 test/constants.h
 test/*/*.o
+test/*.mod
+simulations/*/*.o
 test/*.mod
 studies/Summit_2020-04-15/gatherDataCpp_*
 studies/Summit_2020-04-15/gatherDataF2003_*
