(Issue #19) WIP: Added in the computation and writing of integral quantities. The output is very close to that of associated FLASH-X results.  However, porting this required pulling apart IO_writeIntegralQuantities so that we expose at the level of Driver_evolveFlash the computations that can be done in a multithreaded fashion by the runtime as well as a previously internal data movement.
This is marked as a WIP as the design/implementation needed to be cleaned and
reassessed.

--- a/sites/hello/Makefile_sedov_cpp
+++ b/sites/hello/Makefile_sedov_cpp
@@ -46,6 +46,7 @@ CXX_HDRS   = \
     $(TESTBASEDIR)/errorEstBlank.h \
     $(SIMDIR)/constants.h \
     $(SIMDIR)/Flash.h \
+    $(SIMDIR)/IO.h \
     $(SIMDIR)/Eos.h \
     $(SIMDIR)/Hydro.h \
     $(SIMDIR)/Driver.h \
@@ -80,6 +81,13 @@ SRCS       = \
     $(SIMDIR)/hy_updateSolutionHll.cpp \
     $(SIMDIR)/Hydro_advanceSolution_tile_cpu.cpp \
     $(SIMDIR)/Eos_idealGamma_dens_ie.cpp \
+    $(SIMDIR)/IO_data.cpp \
+    $(SIMDIR)/IO_initialize.cpp \
+    $(SIMDIR)/IO_finalize.cpp \
+    $(SIMDIR)/IO_computeBlockIntegralQuantities.cpp \
+    $(SIMDIR)/IO_computeBlockIntegralQuantities_tile_cpu.cpp \
+    $(SIMDIR)/IO_computeLocalIntegralQuantities.cpp \
+    $(SIMDIR)/IO_writeIntegralQuantities.cpp \
     $(SIMDIR)/Driver_data.cpp \
     $(SIMDIR)/sedov.cpp 
 
