(Issue #19) Switched the IO unit design to a singleton class + one action routine.  If found this to be a nicer design.  I get the sense that there is better encapsulation and I don't need to jump across so many files to make simple changes associated to computing/writing integral quantities.  The interface was also improved (something similar could be done with functions) so that the internal buffers, etc. are encapsulated in the IO unit.

--- a/sites/hello/Makefile_sedov_cpp
+++ b/sites/hello/Makefile_sedov_cpp
@@ -46,7 +46,7 @@ CXX_HDRS   = \
     $(TESTBASEDIR)/errorEstBlank.h \
     $(SIMDIR)/constants.h \
     $(SIMDIR)/Flash.h \
-    $(SIMDIR)/IO.h \
+    $(SIMDIR)/Io.h \
     $(SIMDIR)/Eos.h \
     $(SIMDIR)/Hydro.h \
     $(SIMDIR)/Driver.h \
@@ -81,13 +81,8 @@ SRCS       = \
     $(SIMDIR)/hy_updateSolutionHll.cpp \
     $(SIMDIR)/Hydro_advanceSolution_tile_cpu.cpp \
     $(SIMDIR)/Eos_idealGamma_dens_ie.cpp \
-    $(SIMDIR)/IO_data.cpp \
-    $(SIMDIR)/IO_initialize.cpp \
-    $(SIMDIR)/IO_finalize.cpp \
-    $(SIMDIR)/IO_computeBlockIntegralQuantities.cpp \
-    $(SIMDIR)/IO_computeBlockIntegralQuantities_tile_cpu.cpp \
-    $(SIMDIR)/IO_computeLocalIntegralQuantities.cpp \
-    $(SIMDIR)/IO_writeIntegralQuantities.cpp \
+    $(SIMDIR)/Io.cpp \
+    $(SIMDIR)/Io_computeIntegralQuantitiesByBlock_tile_cpu.cpp \
     $(SIMDIR)/Driver_data.cpp \
     $(SIMDIR)/sedov.cpp 
 
