(Issue #19) Renamed Sedov files to reflect that the present simulation is CPU-only and that there will eventually be a version that can run on GPUs.

--- a/sites/hello/Makefile_sedov_cpu_cpp
+++ b/sites/hello/Makefile_sedov_cpu_cpp
@@ -1,7 +1,7 @@
 SHELL=/bin/sh
 
-BASE         = sedov_cpp
-MAKEFILE     = Makefile_sedov_cpp
+BASE         = sedov_cpu_cpp
+MAKEFILE     = Makefile_sedov_cpu_cpp
 BASEDIR      = ../..
 INCDIR       = $(BASEDIR)/includes
 SRCDIR       = $(BASEDIR)/src
@@ -84,7 +84,7 @@ SRCS       = \
     $(SIMDIR)/Io.cpp \
     $(SIMDIR)/Io_computeIntegralQuantitiesByBlock_tile_cpu.cpp \
     $(SIMDIR)/Driver_data.cpp \
-    $(SIMDIR)/sedov.cpp 
+    $(SIMDIR)/sedov_cpu.cpp 
 
 OBJS      = $(addsuffix .o, $(basename $(SRCS)))
 COMMAND   =  $(BASE).x
