(Issue #19) Started setting up a GPU-based version of the Sedov simulation.  To do this, I started by breaking up computeFluxes and updateSolution into constituent kernels.  These were written for the CPU so that I can run the updated code structure on the CPU and confirm correct execution.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ sites/summit/testRuntimeCuda.*
 sites/summit/gatherDataCpp.*
 sites/summit/gatherDataF2003.*
 sites/summit/sedovCpuCpp.*
+sites/summit/sedovGpuCpp.*
 sites/bebop/build/build_*.log
 sites/bebop/test_threadteam_cpp_bebop.[oe]*
 sites/bebop/test_runtime_cpp_bebop.[oe]*
