(Issue #19) Updated the CPU version of update solution so that it is now implemented as a single loop nest and with no branching.  Used this as an alternate single, large kernel implementation for the GPU setting.

--- a/sites/summit/Makefile_sedov_gpu_cpp
+++ b/sites/summit/Makefile_sedov_gpu_cpp
@@ -92,8 +92,10 @@ SRCS       = \
     $(SIMDIR)/hy_updateVelyHll_oacc_summit.cpp \
     $(SIMDIR)/hy_updateVelzHll_oacc_summit.cpp \
     $(SIMDIR)/hy_updateEnergyHll_oacc_summit.cpp \
+    $(SIMDIR)/hy_updateSolutionHll_oacc_summit.cpp \
     $(SIMDIR)/Hydro_advanceSolution_oacc_summit.cpp \
     $(SIMDIR)/Hydro_advanceSolution2_oacc_summit.cpp \
+    $(SIMDIR)/Hydro_advanceSolution3_oacc_summit.cpp \
     $(SIMDIR)/Eos_idealGamma_dens_ie.cpp \
     $(SIMDIR)/Io.cpp \
     $(SIMDIR)/Io_computeIntegralQuantitiesByBlock_tile_cpu.cpp \
